# CUT

./: CMakeLists.txt
analyzer/: CMakeLists.txt
analyzer/inc/: analyzer.h  analyzer_output.h
analyzer/src/: analyzer.c
lock/: CMakeLists.txt
lock/inc/: lock.h
lock/src/: lock.c
logger/: CMakeLists.txt
logger/inc/: log_queue.h  logger.h
logger/src/: log_queue.c  logger.c
printer/: CMakeLists.txt
printer/inc/: printer.h
printer/src/: printer.c
reader/: CMakelists.txt
reader/inc/: reader.h  reader_output.h
reader/src/: reader.c
src/: main.c
tests/: CMakeLists.txt  lock.c
utility/: CMakelists.txt
utility/inc/: utility.h
utility/src/: utility.c
watchdog/: CMakeLists.txt
watchdog/inc/: watchdog.h  watchdog_interface.h
watchdog/src/: watchdog.c
